# VoronoiLoss

./: .gitignore  LICENSE  main.py  pyproject.toml  quantitativeResults.ipynb  requirements.txt
data/2D/platelet-em/: platelet.py
docs/thesis/: citestyle.csl  glossary.typ  items.bib  main.typ  utils.typ
docs/thesis/chapters/: 0_mathnotation.typ  1_Introduction.typ  2_Background.typ  2_Related_Work.typ  3_Methodology.typ  3_Related_Work.typ  4_Methodology.typ  4_Results.typ  5_Results.typ  6_Conclusion.typ  6_Discussion.typ  (+4 more)
notebooks/: WMH.ipynb  dataset_instance_metrics.ipynb  eval_plots.ipynb  experiment_results.parquet  instance_inspector.py  platelet_augmentation_test.ipynb  platelet_to_2d.ipynb  platelet_to_msd.ipynb  stats_epfl_clean_mit.csv  stats_platelet_clean_ag.csv  stats_platelet_clean_cv.csv  stats_sbm_mets.csv  stats_wmh_wmh.csv
scripts/: nnUNetExperimentViewer.py  platelet_viewer.py  setupcheck.py
scripts/Hendrik_code/: run_voronoi_cfos.py  voronoi_calc.py
src/: LossWrapper.py  VoronoiTransform.py  WeightMapTransforms.py  main.py  network.py  util.py
src/2d/: CCDiceCELoss.py  baseline_training.py  network.py  util.py  voronoi_training.py
src/3d/: network.py  platelet_baseline.py
src/baseline/: example.ipynb  network.py  platelet_to_msd.ipynb  unet_test.ipynb
src/eval/: graphs.ipynb
src/twod/: CCDiceCELoss.py  LossWrapper.py  VoronoiTransform.py  WeightMapTransforms.py  eval.py  main.py  network.py  panoptica_config.yaml  test_model.py  util.py
util/: dataset_instance_metrics.ipynb  ds_metrics.ipynb  platelet_to_2d.ipynb
(+25 files in other folders)
